@@ -2,6 +2,9 @@ Bugfixes
 --------
 - TLS session resumption: avoid bad scheduling of rotation (#385)
 
+Improvements
+------------
+- lua: resurrect cache.get('name') and cache.clear('name'), with caveats
 
 Knot Resolver 2.4.0 (2018-07-03)
 ================================
